# Hockey-League-Simulator

./: .gitignore  PRIME_TIME_CHECKLIST.md  README.md  career_history.json.bak  hall_of_fame.json  hall_of_fame.json.bak  pyproject.toml  season_history.json  season_history.json.bak
src/: league_state.json
src/hockey_league_sim.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/hockey_sim/: __init__.py  api.py  app.py  config.py  engine.py  gui.py  league.py  main.py  models.py  names.py  schedule.py
tests/: test_league_setup.py  test_save_migration.py  test_schedule.py
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  styles.css
